--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "canariapp",
   "version": "0.0.1",
   "dependencies": {
+    "cacheman": "^1.0.3",
     "co": "~3.0.5",
+    "google-spreadsheet": "^0.2.8",
+    "google-spreadsheet-datastore": "^0.2.0",
     "jade": "^1.5.0",
     "koa": "^0.5.5",
     "koa-body": "^0.2.0",
@@ -10,7 +13,9 @@
     "koa-router": "~3.1.3",
     "koa-static": "^1.4.5",
     "koa-static-cache": "^1.1.0",
-    "koa-views": "^2.0.3"
+    "koa-views": "^2.0.3",
+    "spreadsheet": "^0.3.0",
+    "thunkify": "^2.1.2"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
