--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-autoprefixer": "0.0.9",
     "gulp-less": "^1.3.5"
   },
-  "scripts": {
-    "start": "node --harmony app/server/server.js"
+  "engines": {
+    "node": "0.11.x"
   }
 }
